Salesforce CPQ/main/default/objects/FavoriteProduct__c/FavoriteProduct__c.object-meta.xml
<CustomObject>
    <customHelpPage>FavoritesHelp</customHelpPage>
    <label>Favorite Product</label>
    <nameField>
        <label>Favorite Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Favorite Product</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>