Salesforce CPQ/main/default/objects/FavoriteProduct__c/fields/ConfigurationAttributes__c.field-meta.xml
<CustomField>
    <fullName>ConfigurationAttributes__c</fullName>
    <label>Configuration Attributes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>