Salesforce CPQ/main/default/objects/FavoriteProduct__c/fields/DiscountSchedule__c.field-meta.xml
<CustomField>
    <fullName>DiscountSchedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Discount Schedule</label>
    <referenceTo>DiscountSchedule__c</referenceTo>
    <relationshipLabel>Favorite Product</relationshipLabel>
    <relationshipName>Favorite_Product</relationshipName>
    <type>Lookup</type>
</CustomField>