Salesforce CPQ/main/default/objects/FavoriteProduct__c/fields/Favorite__c.field-meta.xml
<CustomField>
    <fullName>Favorite__c</fullName>
    <label>Favorite</label>
    <referenceTo>Favorite__c</referenceTo>
    <relationshipLabel>Favorite Product</relationshipLabel>
    <relationshipName>FavoriteProduct</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>