Salesforce CPQ/main/default/objects/FavoriteProduct__c/fields/RequiredBy__c.field-meta.xml
<CustomField>
    <fullName>RequiredBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Required By</label>
    <referenceTo>FavoriteProduct__c</referenceTo>
    <relationshipLabel>Favorite Product</relationshipLabel>
    <relationshipName>FavoriteProduct</relationshipName>
    <type>Lookup</type>
</CustomField>